force-app/main/default/objects/Diagram_Values__c/Diagram_Values__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Diagram Values</label>
</CustomObject>