force-app/main/default/objects/Diagram_Values__c/fields/Blue__c.field-meta.xml
<CustomField>
    <fullName>Blue__c</fullName>
    <label>Blue</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>