force-app/main/default/objects/Diagram_Values__c/fields/Green__c.field-meta.xml
<CustomField>
    <fullName>Green__c</fullName>
    <label>Green</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>