force-app/main/default/objects/Diagram_Values__c/fields/Orange__c.field-meta.xml
<CustomField>
    <fullName>Orange__c</fullName>
    <label>Orange</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>