force-app/main/default/objects/Diagram_Values__c/fields/Red__c.field-meta.xml
<CustomField>
    <fullName>Red__c</fullName>
    <label>Red</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>