force-app/main/default/objects/Diagram_Values__c/fields/Yellow__c.field-meta.xml
<CustomField>
    <fullName>Yellow__c</fullName>
    <label>Yellow</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>